--- a/style2.css
+++ b/style2.css
@@ -6,6 +6,17 @@
     box-sizing: border-box;
 }
 
+.background-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    /* background-color: rgb(106, 4, 15); */
+    background-color: rgb(250, 240, 202);
+    z-index: -1;
+}
+
 /* Loader CSS */
 .blocks {
     display: flex;
