--- a/style2.css
+++ b/style2.css
@@ -1,22 +1,3 @@
-
-
-*,
-*:before,
-*:after {
-    box-sizing: border-box;
-}
-
-.background-container {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    /* background-color: rgb(106, 4, 15); */
-    background-color: rgb(250, 240, 202);
-    z-index: -1;
-}
-
 /* Loader CSS */
 .blocks {
     display: flex;
@@ -86,6 +67,7 @@
     z-index: 9998;
     display: none;
 }
+
 
 .nav {
     color: rgb(0, 0, 0);
@@ -206,6 +188,40 @@
 .nav__link {
     text-decoration: none;
     color: inherit;
+}
+
+/* .nav__list-child {
+    display: none;
+    font-size: 1.5rem;
+    margin-top: 10px;
+    z-index: 3100;
+    padding-left: 2rem;
+} */
+
+body,
+html {
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+    font-family: 'League Spartan', cursive;
+    padding-bottom: 100px;
+    /* Eller höjden på din footer */
+}
+
+* {
+    box-sizing: border-box;
+}
+
+.background-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    /* background-color: rgb(106, 4, 15); */
+    background-color: rgb(250, 240, 202);
+    z-index: -1;
 }
 
 .top-space {
